--- a/Home24/Base.lproj/Main.storyboard
+++ b/Home24/Base.lproj/Main.storyboard
@@ -57,10 +57,10 @@
             </objects>
             <point key="canvasLocation" x="976.79999999999995" y="95.802098950524751"/>
         </scene>
-        <!--Selection View Controller-->
+        <!--Selection-->
         <scene sceneID="gPc-zc-uCa">
             <objects>
-                <viewController id="LMb-SK-KOs" customClass="SelectionViewController" customModule="Home24" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Selection" id="LMb-SK-KOs" customClass="SelectionViewController" customModule="Home24" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="PaZ-7j-lh0">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -68,22 +68,31 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vra-E3-dFv" customClass="KolodaView" customModule="Koloda">
                                 <rect key="frame" x="30" y="141" width="315" height="293"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Go to Review =)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Haw-F4-Ltx">
-                                        <rect key="frame" x="99" y="167" width="122" height="21"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No more articles, go to review. =)" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MnH-cz-Xe1">
+                                        <rect key="frame" x="77.5" y="121" width="160" height="51"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="160" id="azr-pZ-UQR"/>
+                                            <constraint firstAttribute="height" constant="51" id="wAj-49-i1u"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                        <color key="textColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="No more Articles" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iZT-9P-FFJ">
-                                        <rect key="frame" x="99" y="116" width="128" height="21"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="8SC-Xg-eb3">
+                                        <rect key="frame" x="132.5" y="121.5" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="50" id="GwG-k2-j6d"/>
+                                            <constraint firstAttribute="height" constant="50" id="nQ2-2W-XpL"/>
+                                        </constraints>
+                                    </activityIndicatorView>
                                 </subviews>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="MnH-cz-Xe1" firstAttribute="centerX" secondItem="vra-E3-dFv" secondAttribute="centerX" id="2kp-18-FiW"/>
+                                    <constraint firstItem="MnH-cz-Xe1" firstAttribute="centerY" secondItem="vra-E3-dFv" secondAttribute="centerY" id="8Eh-Nk-IOd"/>
+                                    <constraint firstItem="8SC-Xg-eb3" firstAttribute="centerX" secondItem="vra-E3-dFv" secondAttribute="centerX" id="aus-c0-OyQ"/>
+                                    <constraint firstItem="8SC-Xg-eb3" firstAttribute="centerY" secondItem="vra-E3-dFv" secondAttribute="centerY" id="rps-QT-lDp"/>
+                                </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1J5-r0-bOJ">
                                 <rect key="frame" x="20" y="587" width="335" height="50"/>
@@ -153,8 +162,10 @@
                         <viewLayoutGuide key="safeArea" id="f4H-GI-kFg"/>
                     </view>
                     <connections>
+                        <outlet property="activityIndicator" destination="8SC-Xg-eb3" id="b6s-CY-Rpf"/>
                         <outlet property="amountArticlesLabel" destination="j1d-89-hPG" id="YNT-BK-rpJ"/>
                         <outlet property="amountLikedArticlesLabel" destination="vbb-UY-nIY" id="IR7-dx-GP9"/>
+                        <outlet property="placeHolderLabel" destination="MnH-cz-Xe1" id="V6j-i7-Xlj"/>
                         <outlet property="reviewBtn" destination="1J5-r0-bOJ" id="hiR-W3-uCX"/>
                         <outlet property="selectionView" destination="vra-E3-dFv" id="pSr-aG-dcj"/>
                     </connections>
@@ -163,10 +174,10 @@
             </objects>
             <point key="canvasLocation" x="1744.8" y="90.404797601199405"/>
         </scene>
-        <!--GridView-->
+        <!--Grid-->
         <scene sceneID="gkj-b0-c5v">
             <objects>
-                <viewController id="Yn1-Ds-UxD" customClass="CollectionViewController" customModule="Home24" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Grid" id="Yn1-Ds-UxD" customClass="CollectionViewController" customModule="Home24" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ciy-qq-aLS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -238,10 +249,10 @@
             </objects>
             <point key="canvasLocation" x="3420" y="423.23838080959524"/>
         </scene>
-        <!--ListView-->
+        <!--List-->
         <scene sceneID="2jK-rF-r8m">
             <objects>
-                <viewController id="laP-E9-RMc" customClass="TableViewController" customModule="Home24" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="List" id="laP-E9-RMc" customClass="TableViewController" customModule="Home24" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="g1i-5x-wea">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
